--- a/cover.css
+++ b/cover.css
@@ -106,6 +106,7 @@ body {
 
 .slayt {
   margin-top: 5rem;
+  box-shadow: 0px 0px 10px #fff;
 }
 
 .slayt img {
@@ -148,11 +149,14 @@ hr {
 
 .card-body {
   background-color: #212529;
+  box-shadow: 0px 0px 10px #fff;
 }
+
 
 .card img {
   width: 235px;
   height: 355px;
+  box-shadow: 0px 0px 10px #fff;
 }
 
 .list-group {
@@ -184,6 +188,7 @@ hr {
 .card iframe {
   width: 100%;
   height: 585px;
+  box-shadow: 0px 0px 10px #fff;
 }
 
 .table {
@@ -199,6 +204,11 @@ hr {
   width: 25rem;
   margin-bottom: 3rem;
 }
+
+.sarki {
+  box-shadow: 0px 0px 10px #fff;
+}
+
 /* Footer */
 
 footer .inner {
