--- a/hakkimizda.css
+++ b/hakkimizda.css
@@ -49,3 +49,11 @@ body {
 .avatar-1, .avatar-2, .avatar-3 {
   box-shadow: 0px 0px 10px #fff;
 }
+
+/* Footer */
+
+.footer {
+  text-align: center;
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, .5);
+}
