--- a/cover.css
+++ b/cover.css
@@ -146,6 +146,15 @@ hr {
   border-bottom: 1px solid #fff !important;
 }
 
+.kart-1, .kart-2, .kart-3, .kart-4, .kart-5, .kart-6, .kart-7, .kart-8, .kart-9, .kart-10 {
+  transition: transform .2s;
+}
+
+.kart-1:hover, .kart-2:hover, .kart-3:hover, .kart-4:hover, .kart-5:hover, .kart-6:hover, .kart-7:hover, .kart-8:hover, .kart-9:hover, .kart-10:hover {
+  transform: scale(1.1);
+  z-index: 1;
+}
+
 #haftanınkitapları {
   margin-top: 2rem;
 }
