--- a/success.css
+++ b/success.css
@@ -1,6 +1,20 @@
 body {
   background-color: #212529;
-  color: white;
+  color: white !important;
+}
+
+
+body {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  color: #fff;
+  height: 100vh !important;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .check {
