Hakkımızda sayfası tamamlandı.

--- a/cover.css
+++ b/cover.css
@@ -123,16 +123,22 @@ hr {
 
 /* Duyurular */
 
+
 #duyurular {
-  margin-top: -5rem;
+margin-top: 3rem;
 }
 
-#duyurular h2{
-  padding-bottom: 2rem;
+#duyurular p {
+  font-size: 1.5rem;
+}
+
+#duyurular h3{
+  padding-bottom: 1rem;
 }
 
 #duyurular hr {
-  margin-top: 5rem;
+  margin-top: -1rem;
+  margin-bottom: 0;
 }
 
 /* Haftanın Kitapları */
@@ -146,11 +152,11 @@ hr {
   border-bottom: 1px solid #fff !important;
 }
 
-.kart-1, .kart-2, .kart-3, .kart-4, .kart-5, .kart-6, .kart-7, .kart-8, .kart-9, .kart-10 {
+.kart-1, .kart-2, .kart-3, .kart-4, .kart-5, .kart-6, .kart-7, .kart-8, .kart-9, .kart-10, .kart-11, .kart-12, .kart-13 {
   transition: transform .2s;
 }
 
-.kart-1:hover, .kart-2:hover, .kart-3:hover, .kart-4:hover, .kart-5:hover, .kart-6:hover, .kart-7:hover, .kart-8:hover, .kart-9:hover, .kart-10:hover {
+.kart-1:hover, .kart-2:hover, .kart-3:hover, .kart-4:hover, .kart-5:hover, .kart-6:hover, .kart-7:hover, .kart-8:hover, .kart-9:hover, .kart-10:hover, .kart-11:hover, .kart-12:hover, .kart-13:hover {
   transform: scale(1.1);
   z-index: 1;
 }
