--- a/hakkimizda.css
+++ b/hakkimizda.css
@@ -6,6 +6,12 @@ body {
   margin-bottom: 5rem !important;
 }
 
+.hakkimizda-header-h3 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3rem;
+  margin-top: -2rem;
+}
 /* Carousel */
 
 #myCarousel {
