--- a/cover.css
+++ b/cover.css
@@ -178,7 +178,7 @@ margin-top: 3rem;
 
 
 .card img {
-  width: 235px;
+  /* width: 235px; */
   height: 355px;
   box-shadow: 0px 0px 10px #fff;
 }
