--- a/cover.css
+++ b/cover.css
@@ -120,7 +120,7 @@ hr {
   height: 2px !important;
 
 }
-.carousel-caption {
+.blur {
   background-color: rgba(255, 255, 255, .15);
   backdrop-filter: blur(10px);
   border-radius: 20px;
