--- a/cover.css
+++ b/cover.css
@@ -1,3 +1,5 @@
+
+
 /*
  * Globals
  */
@@ -7,6 +9,16 @@ a,
 a:focus,
 a:hover {
   color: #fff;
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(255, 255, 255, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  width: 100%;
+
 }
 
 /* Custom default button */
@@ -44,7 +56,7 @@ body {
 }
 
 .cover-container {
-  max-width: 50em;
+  /* max-width: 50em; */
 }
 
 
@@ -53,6 +65,7 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+  margin: 3rem 15rem;
 }
 
 .masthead-brand {
@@ -105,7 +118,7 @@ body {
 /* Caroulsel */
 
 .slayt {
-  margin-top: 5rem;
+  margin: 3rem 15rem;
   box-shadow: 0px 0px 10px #fff;
 }
 
@@ -130,7 +143,7 @@ hr {
 
 
 #duyurular {
-margin-top: 3rem;
+margin: 3rem 15rem;
 }
 
 #duyurular p {
@@ -156,6 +169,13 @@ margin-top: 3rem;
   color: #fff !important;
   border-bottom: 1px solid #fff !important;
 }
+.hakkimizda-siyah {
+  color: #000 !important;
+
+}
+.hakkimizda-beyaz {
+  color: #fff !important;
+}
 
 .kart-1, .kart-2, .kart-3, .kart-4, .kart-5, .kart-6, .kart-7, .kart-8, .kart-9, .kart-11, .kart-12, .kart-13 {
   transition: transform .2s;
@@ -167,11 +187,12 @@ margin-top: 3rem;
 }
 
 #haftanınkitapları {
-  margin-top: 2rem;
+  margin: 3rem 15rem;
 }
 
 .haftanınkitaplarıdiv hr {
   margin-top: 0;
+  margin-bottom: 2rem !important;
   margin: auto;
   width: 25rem;
 }
@@ -206,12 +227,14 @@ margin-top: 3rem;
 
 /* Haftanın Filmi */
 
+#haftanınfilmi {
+  margin: 3rem 15rem;
+}
 
 #haftanınfilmi hr {
-  margin-top: 0;
+  margin-bottom: 2rem !important;
   margin: auto;
   width: 25rem;
-  margin-bottom: 3rem;
 }
 
 .card iframe {
@@ -227,11 +250,15 @@ margin-top: 3rem;
 
 /* Haftanın Şarkısı */
 
+#sarki {
+  margin: 3rem 15rem;
+}
+
 .sarki-div hr {
   margin-top: 0;
   margin: auto;
   width: 25rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .sarki {
