--- a/cover.css
+++ b/cover.css
@@ -155,7 +155,7 @@ hr {
 
 
 #duyurular {
-margin: 3rem 15rem;
+margin: 3rem 15rem 0 15rem;
 }
 
 #duyurular p {
@@ -185,6 +185,7 @@ margin: 3rem 15rem;
   color: #000 !important;
 
 }
+
 .hakkimizda-beyaz {
   color: #fff !important;
 }
@@ -200,6 +201,11 @@ margin: 3rem 15rem;
 
 #haftanınkitapları {
   margin: 3rem 15rem;
+}
+
+.album {
+  display: -webkit-inline-box;
+  max-width: 55rem;
 }
 
 .haftanınkitaplarıdiv hr {
@@ -243,6 +249,11 @@ margin: 3rem 15rem;
   margin: 3rem 15rem;
 }
 
+.kart-10 {
+  display: inline-table;
+  max-width: 55rem;
+}
+
 #haftanınfilmi hr {
   margin-bottom: 2rem !important;
   margin: auto;
@@ -275,6 +286,7 @@ margin: 3rem 15rem;
 
 .sarki {
   box-shadow: 0px 0px 10px #fff;
+  max-width: 55rem;
 }
 
 /* Footer */
@@ -283,8 +295,6 @@ footer .inner {
   margin-top: 5rem;
   font-size: 1.2rem;
 }
-
-
 
 .mastfoot {
   color: rgba(255, 255, 255, .5);
