--- a/hakkimizda2.css
+++ b/hakkimizda2.css
@@ -18,6 +18,10 @@
   margin: 3rem 15rem;
 }
 
+.row-uclu-h2 {
+  padding-top: 1.5rem;
+}
+
 .avatar-1, .avatar-2, .avatar-3 {
   border-radius: 300px;
   box-shadow: 0px 0px 10px #fff;
@@ -40,4 +44,8 @@
 
 .kart-govde-11, .kart-govde-12, .kart-govde-13 {
   padding-top: 5rem;
+}
+
+.hakkimizda-border-shadow {
+  box-shadow: 0px 0px 10px #fff;
 }
