--- a/iletisim.css
+++ b/iletisim.css
@@ -6,6 +6,11 @@ body {
   background-color: #212529;
 }
 
+.navbar {
+  padding: 0;
+  margin-top: 2rem;
+}
+
 /* p {
   margin: 16px 0;
 } */
@@ -124,7 +129,6 @@ body {
 
 .footer a {
   color: #fff;
-  margin-left: 1rem;
 }
 
 .instagram-a {
